--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -1,15 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="addmoneyviewmodel"
+            type="com.example.spidpay.ui.spwallet.AddMoneyViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.addmoney.requestparent.TranferMoneyActivity">
+        tools:context=".ui.tradewallet.TransferMoneyActivity">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/carview_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0.0px"
+            android:elevation="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            card_view:cardElevation="10dp"
+            card_view:cardPreventCornerOverlap="false">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/marign5dp"
+                android:paddingBottom="@dimen/marign5dp">
+
+                <ImageView
+                    android:id="@+id/img_backpress"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="@dimen/marign10dp"
+
+                    android:contentDescription="TODO"
+                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/img_backpress"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/transfermoney"
+                    android:textColor="@color/page_heading_color"
+                    android:textSize="@dimen/marign16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/img_backpress"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tv_transfermoney_option"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/chooseoption"
+            android:textColor="@color/black"
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/carview_header" />
+
+        <RadioButton
+            android:id="@+id/rb_transfertowallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:checked="@={addmoneyviewmodel.transfer_spid_wallet}"
+            android:onClick="@{()->addmoneyviewmodel.onTransferToSPClick()}"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/transfertospidwallet"
+            android:textColor="@color/black"
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/tv_transfermoney_option" />
+
+        <EditText
+            android:id="@+id/edt_amount_spidwallet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_weight="1"
+            android:background="@drawable/edittext_shadow"
+            android:hint="@string/enteramount"
+            android:importantForAutofill="no"
+            android:inputType="number"
+            android:paddingLeft="@dimen/marign10dp"
+            android:paddingTop="@dimen/marign15dp"
+            android:paddingRight="@dimen/marign10dp"
+            android:paddingBottom="@dimen/marign15dp"
+            android:textColorHint="@color/lightgrey"
+            app:layout_constraintTop_toBottomOf="@+id/rb_transfertowallet" />
+
+
+        <RadioButton
+            android:id="@+id/rb_transfertobank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/tranfertobank"
+            android:onClick="@{()->addmoneyviewmodel.onTransferToBank()}"
+            android:checked="@={addmoneyviewmodel.transfer_to_bank}"
+            android:textColor="@color/black"
+            card_view:layout_constraintLeft_toLeftOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/edt_amount_spidwallet" />
+
+
+
+        <EditText
+            android:id="@+id/edt_amount_transferbank"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_weight="1"
+            android:background="@drawable/edittext_shadow"
+            android:hint="@string/enteramount"
+            android:importantForAutofill="no"
+            android:inputType="number"
+            android:paddingLeft="@dimen/marign10dp"
+            android:paddingTop="@dimen/marign15dp"
+            android:paddingRight="@dimen/marign10dp"
+            android:paddingBottom="@dimen/marign15dp"
+            android:textColorHint="@color/lightgrey"
+            app:layout_constraintTop_toBottomOf="@+id/rb_transfertobank" />
+
+
+        <EditText
+            android:id="@+id/edt_transferwallet_notes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_weight="1"
+            android:background="@drawable/edittext_shadow"
+            android:hint="@string/notes"
+            android:inputType="text"
+            android:paddingLeft="@dimen/marign10dp"
+            android:paddingTop="@dimen/marign15dp"
+            android:paddingRight="@dimen/marign10dp"
+            android:paddingBottom="@dimen/marign15dp"
+            android:text="@={addmoneyviewmodel.online_notes}"
+            android:textColorHint="@color/lightgrey"
+            app:layout_constraintTop_toBottomOf="@+id/edt_amount_transferbank"
+            android:importantForAutofill="no" />
+
+
+
+        <Button
+            android:id="@+id/btn_proceed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:background="@drawable/button_bg_green"
+            android:fontFamily="@font/lato"
+            android:text="@string/transfer"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/marign18sp"
+            app:layout_constraintTop_toBottomOf="@+id/edt_transferwallet_notes" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
