--- a/app/src/main/res/layout/activity_verify_o_t_p.xml
+++ b/app/src/main/res/layout/activity_verify_o_t_p.xml
@@ -133,11 +133,13 @@
             android:text="@string/verficationtxt2"
             android:textColor="@color/dark_blue"
             android:textSize="@dimen/marign18sp"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_verify_otp" />
 
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_changenumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
