--- a/app/src/main/res/layout/fragment_add_money.xml
+++ b/app/src/main/res/layout/fragment_add_money.xml
@@ -34,21 +34,19 @@
             android:elevation="8dp"
             app:layout_constraintTop_toTopOf="parent"
             card_view:cardElevation="10dp"
-            card_view:cardPreventCornerOverlap="false"
-            tools:targetApi="lollipop">
+            card_view:cardPreventCornerOverlap="false">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/marign5dp"
-                android:paddingBottom="@dimen/marign5dp">
+                android:paddingTop="@dimen/marign10dp"
+                android:paddingBottom="@dimen/marign10dp">
 
                 <ImageView
                     android:id="@+id/img_backpress"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_marginStart="@dimen/marign10dp"
-
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -62,7 +60,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/addmoney"
                     android:textColor="@color/page_heading_color"
-                    android:textSize="@dimen/marign16sp"
+                    android:textSize="@dimen/marign18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/img_backpress"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -78,8 +76,8 @@
             android:id="@+id/tv_addmoney_preferedoption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign40dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/prefoption"
             android:textColor="@color/black"
@@ -89,81 +87,130 @@
 
 
         <RadioButton
+            android:buttonTint="@color/light_green"
             android:id="@+id/rb_online"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:checked="@{addmoneyviewmodel.online}"
             android:onClick="@{()->addmoneyviewmodel.onOnlineClick()}"
-            android:text="@string/online"
             android:textColor="@color/black"
             android:textSize="@dimen/marign20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_preferedoption" />
 
+
+        <TextView
+            android:onClick="@{()->addmoneyviewmodel.onOnlineClick()}"
+            android:id="@+id/tv_online"
+            android:textSize="@dimen/marign20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/marign25dp"
+            android:layout_marginStart="@dimen/marign5dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/online"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_preferedoption"
+            app:layout_constraintLeft_toRightOf="@+id/rb_online"
+            />
+
+
         <TextView
             android:id="@+id/tv_addmoney_usingpaymentgetway"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign40dp"
+            android:layout_marginStart="@dimen/marign7dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/usingpaymentgetway"
             android:textColor="@color/add_money_hint_color"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rb_online" />
+            app:layout_constraintLeft_toRightOf="@+id/rb_online"
+            app:layout_constraintTop_toBottomOf="@+id/tv_online" />
 
 
         <RadioButton
+            android:buttonTint="@color/light_green"
             android:id="@+id/rb_cashdesposit"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign25dp"
             android:checked="@{addmoneyviewmodel.cashdeposite}"
             android:onClick="@{()->addmoneyviewmodel.onDepositeCashClick()}"
-            android:text="@string/cashdeposit"
             android:textColor="@color/black"
             android:textSize="@dimen/marign20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_usingpaymentgetway" />
 
         <TextView
+            android:onClick="@{()->addmoneyviewmodel.onDepositeCashClick()}"
+            android:id="@+id/tv_cashdeposite"
+            android:textSize="@dimen/marign20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/marign30dp"
+            android:layout_marginStart="@dimen/marign5dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/cashdeposit"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_usingpaymentgetway"
+            app:layout_constraintLeft_toRightOf="@+id/rb_cashdesposit"
+            />
+
+
+        <TextView
+            android:layout_marginStart="@dimen/marign7dp"
+            app:layout_constraintLeft_toRightOf="@+id/rb_cashdesposit"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cashdeposite"
             android:id="@+id/tv_addmoney_requiredvalidation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign40dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/requiredvalidation"
             android:textColor="@color/add_money_hint_color"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rb_cashdesposit" />
+             />
 
         <RadioButton
+            android:buttonTint="@color/light_green"
             android:id="@+id/rb_requestparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign25dp"
             android:checked="@{addmoneyviewmodel.requestparent}"
             android:onClick="@{()->addmoneyviewmodel.onRequestParentClick()}"
-            android:text="@string/requestparent"
             android:textColor="@color/black"
             android:textSize="@dimen/marign20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_requiredvalidation" />
 
+
         <TextView
+            android:text="@string/requestparent"
+            android:onClick="@{()->addmoneyviewmodel.onRequestParentClick()}"
+            android:id="@+id/tv_request_parent"
+            android:textSize="@dimen/marign20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/marign30dp"
+            android:layout_marginStart="@dimen/marign5dp"
+            android:fontFamily="@font/lato_bold"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_requiredvalidation"
+            app:layout_constraintLeft_toRightOf="@+id/rb_requestparent"
+            />
+
+        <TextView
+            android:layout_marginStart="@dimen/marign7dp"
             android:id="@+id/tv_addmoney_requestparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign40dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/immediateparent"
             android:textColor="@color/add_money_hint_color"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rb_requestparent" />
+            app:layout_constraintLeft_toRightOf="@id/rb_requestparent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_request_parent" />
 
 
         <EditText
@@ -171,7 +218,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign25dp"
             android:layout_marginEnd="@dimen/marign20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
@@ -194,7 +241,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign25dp"
             android:layout_marginEnd="@dimen/marign20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
@@ -216,9 +263,9 @@
             android:id="@+id/btn_chooseoptionformoney"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/marign25dp"
+            android:layout_marginTop="@dimen/marign25dp"
+            android:layout_marginEnd="@dimen/marign25dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:onClick="@{(v)->addmoneyviewmodel.onButtonContinueClick(v,balance)}"
