--- a/app/src/main/res/layout/alltransaction_itemview.xml
+++ b/app/src/main/res/layout/alltransaction_itemview.xml
@@ -54,6 +54,7 @@
 
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/img_transactiontype"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -71,10 +72,11 @@
                 android:layout_marginTop="@dimen/marign3dp"
                 android:layout_marginEnd="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="@{alltransaction.amount}"
+                android:text="@{`₹ `+alltransaction.amount}"
                 android:textColor="@color/light_green"
-                app:layout_constraintLeft_toRightOf="@+id/img_transactiontype"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+               />
 
             <TextView
                 android:id="@+id/tv_all_tramsaction_date"
