commit 13-07-2021  time for spidpay

--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -146,7 +146,7 @@
                             android:layout_height="@dimen/marign30dp"
                             android:layout_centerHorizontal="true"
                             android:layout_gravity="center"
-                            android:src="@drawable/commission"
+                            android:src="@drawable/ic_commision"
                             android:contentDescription="TODO" />
 
                         <TextView
