--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="marign7dp">7dp</dimen>
+    <dimen name="margin90dp">90dp</dimen>
 </resources>
