--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -19,6 +19,12 @@
     <dimen name="marign120dp">120dp</dimen>
     <dimen name="marign15dp">15dp</dimen>
     <dimen name="marign130dp">130dp</dimen>
+
+    <dimen name="landing_page_bg_width">125dp</dimen>
+    <dimen name="landing_page_bg_height">121dp</dimen>
+    <dimen name="marign7dp">7dp</dimen>
+    <dimen name="grey_circle_height_width">70dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
