--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="purple_200">#021477</color>
     <color name="welcome_txt_color">#586F8F</color>
     <color name="black">#FF000000</color>
+    <color name="red">#FF0000</color>
     <color name="approval_text_color">#777071</color>
     <color name="approval_bg">#F8F6F6</color>
     <color name="white">#FFFFFFFF</color>
