--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="addmoneyviewmodel"
-            type="com.example.spidpay.ui.spwallet.AddMoneyViewModel" />
+            type="com.example.spidpay.ui.addmoney.AddMoneyViewModel" />
 
     </data>
 
@@ -65,7 +65,7 @@
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
+        <!--<TextView
             android:id="@+id/tv_transfermoney_option"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -183,7 +183,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
             app:layout_constraintTop_toBottomOf="@+id/edt_transferwallet_notes" />
-
+-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
