without bug runing project 2nd push of the day

--- a/app/src/main/res/layout/addmoneylayout.xml
+++ b/app/src/main/res/layout/addmoneylayout.xml
@@ -18,7 +18,7 @@
 
         <variable
             name="addmoneyviewmodel"
-            type="com.example.spidpay.ui.addmoney.AddMoneyViewModel" />
+            type="com.example.spidpay.ui.spwallet.AddMoneyViewModel" />
 
     </data>
 
