--- a/app/src/main/res/layout/forgotpasswordlayout.xml
+++ b/app/src/main/res/layout/forgotpasswordlayout.xml
@@ -30,7 +30,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-            app:passwordToggleEnabled="true">
+            app:endIconMode="password_toggle"
+            >
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edt_forgot_password"
@@ -38,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_shadow"
                 android:hint="@string/password"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:paddingStart="@dimen/marign15dp"
                 android:paddingEnd="@dimen/marign10dp"
                 android:text="@={loginviewmodel.forgot_password}"
@@ -58,7 +59,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtinput_forgot_password"
             app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-            app:passwordToggleEnabled="true">
+            app:endIconMode="password_toggle"
+           >
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edt_loginpassword"
@@ -66,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_shadow"
                 android:hint="@string/confirmpassword"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:paddingStart="@dimen/marign15dp"
                 android:paddingEnd="@dimen/marign10dp"
                 android:text="@={loginviewmodel.forgot_confirm_passwprd}"
