--- a/app/src/main/res/drawable/all_transaction_bg.xml
+++ b/app/src/main/res/drawable/all_transaction_bg.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid
+        android:color="#F1F5FA"/>
+    <corners
+        android:radius="10dp" />
+    <stroke
+        android:width="2dp"
+        android:color="#ACACE5"/>
+</shape>
