--- a/app/src/main/res/layout/activity_cash_deposite.xml
+++ b/app/src/main/res/layout/activity_cash_deposite.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="user"
-            type="com.example.spidpay.data.response.UserData" />
+            type="com.example.spidpay.data.response.UserInfo" />
 
         <variable
             name="addmoneyviewmodel"
@@ -272,7 +272,7 @@
                 android:layout_marginRight="@dimen/marign10dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
-                android:onClick="@{(v)->addmoneyviewmodel.validate_CashDeposite_Filed(v,user)}"
+                android:onClick="@{(v)->addmoneyviewmodel.validate_CashDeposite_Filed(v)}"
                 android:text="@string/reqestmoney"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
