--- a/app/src/main/res/layout/activity_get_all_transaction_by_wallet_id.xml
+++ b/app/src/main/res/layout/activity_get_all_transaction_by_wallet_id.xml
@@ -3,25 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
 
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.alltransaction.AllTransactionByWalletIdAcivity">
 
+        <RelativeLayout
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/relative_landing_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/dialogwith_whiteborder"
+            android:paddingTop="@dimen/marign10dp"
+            android:paddingBottom="@dimen/marign10dp">
+
+            <ImageView
+                android:layout_centerVertical="true"
+                android:id="@+id/img_backpress"
+                android:layout_width="@dimen/marign30dp"
+                android:layout_height="@dimen/marign30dp"
+                android:layout_marginStart="@dimen/marign10dp"
+                android:contentDescription="@string/image"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24" />
+
+            <TextView
+
+                android:text="@string/spidpaywallet"
+                android:fontFamily="@font/lato_bold"
+                android:layout_marginLeft="@dimen/marign10dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/img_backpress"
+                android:id="@+id/tv_page_title"
+                android:textSize="@dimen/marign18sp"
+                android:textColor="@color/page_heading_color"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+        </RelativeLayout>
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
+
+            app:layout_constraintTop_toBottomOf="@+id/relative_landing_header"
             android:id="@+id/constraint_all_transaction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/marign10dp"
             android:background="@drawable/all_transaction_bg"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingBottom="@dimen/marign15dp"
+            android:paddingTop="@dimen/marign20dp"
+            android:paddingBottom="@dimen/marign20dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+           >
 
             <LinearLayout
                 android:id="@+id/linear_balance"
@@ -44,7 +80,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marign10dp"
                     android:fontFamily="@font/lato_bold"
-                    android:text="Rs.60000"
                     android:textColor="@color/green"
                     app:layout_constraintLeft_toRightOf="@+id/tv_wallet_balance"
                     app:layout_constraintTop_toTopOf="parent" />
