--- a/app/src/main/res/layout/activity_payment_successful.xml
+++ b/app/src/main/res/layout/activity_payment_successful.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.addmoney.PaymentSuccessfulActivity">
+        tools:context=".ui.spwallet.PaymentSuccessfulActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toTopOf="parent"
